[package]
name = "synology-filestation-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
app_dirs2 = "2.5.5"
educe = "0.6.0"
rusqlite = "0.37.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
