[package]
name = "synology-filestation-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
app_dirs2 = "2.5.5"
clap = { version = "4.5.48", features = ["cargo"] }
educe = "0.6.0"
hostname = "0.4.1"
reqwest = "0.12.24"
rpassword = "7.4.0"
rusqlite = "0.37.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
urlencoding = "2.1.3"
